# Research-20Mar26_2

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
configs/: default.json  real_dataset_manifest.ndjson  real_manifest_schema.md
scripts/: fetch_real_subset.py  generate_real_manifest.py  run_smoke_test.py
src/rffi_core/: __init__.py  types.py
src/rffi_core/config/: __init__.py  schemas.py  settings.py
src/rffi_core/core/: __init__.py  contracts.py
src/rffi_core/data/: __init__.py  real_subset_fetcher.py
src/rffi_core/utils/: __init__.py  errors.py  logging_utils.py  memory_guard.py
tests/: test_settings_contract.py
